--- a/Day056/My_Personal_Site/templates/index.html
+++ b/Day056/My_Personal_Site/templates/index.html
@@ -5,73 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💻 Thomas Ramirez - Personal Site 💻</title>
+    <title>Thomas Ramirez Rozo</title>
+    <link rel="stylesheet" href="./static/css/styles.css">
+    <link rel="shortcut icon" href="./static/favicon.ico?v=2" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <table cellspacing="20">
-        <tr>
-            <td><img src="./static/images/toto-croped-circle.png" alt="Thomas' profiler picture" height="150"></td>
-            <td>
-                <h1>Thomas Ramirez-Rozo</h1>
-                <p><em>SAP BTP Consultant</em></p>
-                <p>Electronic Engineer with Magister in Industrial Automation. I like books, videogames and jogging</p>
-            </td>
-        </tr>
-    </table>
-    <hr>
-    <h3>Education</h3>
-    <ul>
-        <li>Electronic Engineer - Universidad Nacional de Colombia</li>
-        <li>Magister in Enginner: Industrial Automation - Universidad Nacional de Colombia</li>
-        <li>MisionTIC 2022 - Universidad de Caldas</li>
-        <li>Bot Building with SAP Intelligent RPA 2.0 Track (2022 Edition)</li>
-        <li>Chatbot Building with SAP Conversational AI Track (2022 Edition)</li>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>Dates</th>
-                <th>Work</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2015 - 2019</td>
-                <td>Experiencie in teching</td>
-            </tr>
-            <tr>
-                <td>2022</td>
-                <td>SAP BTP Consultant</td>
-            </tr>
-        </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-        <tr>
-            <td>
-                <table cellspacing="10">
-                    <tr>
-                        <td>HTML</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                        <td>Drawing</td>
-                        <td>⭐</td>
-                    </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>⭐⭐⭐</td>
-                        <td>Painting</td>
-                        <td>⭐</td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-    <a href="/hobbies.html">My Hobbies</a> <br>
-    <a href="contactme.html">Contact me</a> <br>
+    <div class="top-container">
+        <!-- <img class="top-cloud" src="images/cloud.png" alt="cloud-img"> -->
+        <img class="top-cloud" src="./static/images/cloud2.png" alt="cloud-img">
+        <h1>I'm Thomas.</h1>
+        <h2>a <span class="pro">pro</span>grammer</h2>
+        <img class="bottom-cloud" src="./static/images/cloud2.png" alt="cloud-img">
+        <!-- <img src="images/mountain.png" alt="mountain-img"> -->
+        <img class="mountain" src="./static/images/mountain2.png" alt="mountain-img">
+    </div>
+    <div class="middle-container">
+        <div class="profile">
+            <img class="profile-img" src="./static/images/toto-croped-circle.png" alt="profile-picture">
+            <h2>Hello.</h2>
+            <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes
+                nulla distinctio.
+            </p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="development" src="./static/images/development.png" alt="my-skills">
+                <h3>Development</h3>
+                <p class="development-skill-description">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
+                    Consectetuer
+                    vestibulum, nunc urna
+                    lectus,
+                    erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            </div>
+            <div class="skill-row second-skill">
+                <img class="reading" src="./static/images/reading.png" alt="reading">
+                <h3>Reading</h3>
+                <p class="reading-skill-description">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
+                    bibendum
+                    interdum, lacus quis
+                    mauris.
+                    Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="getin-touch">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec
+                dui, ornare erat.</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
+    </div>
+
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p class="copy-right">© Thomas Ramirez-Rozo.</p>
+    </div>
+
 </body>
 
 </html>
