Feat: Flask - Jinja Templating Copyright Challenge

--- a/Day057/Jinja_Templating/templates/index.html
+++ b/Day057/Jinja_Templating/templates/index.html
@@ -10,4 +10,7 @@
     <h1>{{ 2 * 3 }}</h1>
     <h1>Random Number: {{ num }}</h1>
 </body>
+<footer>
+    <p>Copyright {{ year }}</p>
+</footer>
 </html>
