Feat: Flask Blog Project Fixed Header/Footer

--- a/Day059/Upgraded_Blog/templates/index.html
+++ b/Day059/Upgraded_Blog/templates/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!-- Header Templating -->
 {% include "header.html" %}
 
 <!-- Page Header -->
@@ -56,7 +54,3 @@
 
 <!-- Footer Templating -->
 {% include "footer.html" %}
-
-</body>
-
-</html>
