--- a/Day060/HTML_Forms/templates/index.html
+++ b/Day060/HTML_Forms/templates/index.html
@@ -10,14 +10,14 @@
 <body>
     <h1>HTML Form</h1>
 
-    <form action="" method="post">
+    <form action="{{ url_for('login') }}" method="post">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" placeholder="Username">
 
         <label for="password">Password</label>
         <input type="password" name="password" id="password" placeholder="Password">
 
-        <input type="submit" value="Go">
+        <button type="submit">Ok</button>
     </form>
 </body>
 
