--- a/Day060/HTML_Forms/templates/index.html
+++ b/Day060/HTML_Forms/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>HTML Form</h1>
 
-    <form action="{{ url_for('login') }}" method="post">
+    <form action="/login" method="post">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" placeholder="Username">
 
