Feat: Flask - Contact Form Working

--- a/Day060/02-Blog_Contact_Form/templates/contact.html
+++ b/Day060/02-Blog_Contact_Form/templates/contact.html
@@ -6,8 +6,12 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="page-heading">
+          {% if msg_sent: %}
           <h1>Contact Me</h1>
-          <span class="subheading">Have questions? I have answers.</span>
+          {% else: %}
+          <h1>Contact Me</h1>
+          {% endif %}
+          <span class="subheading">Successfully sent your message</span>
         </div>
       </div>
     </div>
@@ -26,7 +30,7 @@
           <!-- * * * * * * * * * * * * * * *-->
           <!-- * * Simplified SB Contact Form for the Tutorial* *-->
           <!-- TODO: add an "action" and a "method" to link this form to your main.py -->
-          <form action="{{ url_for('receive_data') }}" method="post" id="contactForm" name="sentMessage">
+          <form action="{{ url_for('contact') }}" method="post" id="contactForm" name="sentMessage">
             <div class="form-floating">
               <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required />
               <label for="name">Name</label>
