--- a/Day061/Flask_WTForms/templates/login.html
+++ b/Day061/Flask_WTForms/templates/login.html
@@ -11,12 +11,11 @@
 		<h1>Login</h1>
 		<!-- This is where our form will go. -->
 
-		<form action="/login.html" method="POST">
+		<form action="{{ url_for('login') }}" method="POST">
 			{{ form.csfr_token }}
-			{{ form.email.label }} {{ form.email(size=30) }}
-			{{ form.password.label }} {{ form.password(size=30) }}
-
-			<input type="submit" value="Go">
+			<p>{{ form.email.label }} <br> {{ form.email(size=30) }}</p>
+			<p>{{ form.password.label }} <br> {{ form.password(size=30) }}</p>
+			{{ form.submit }}
 		</form>
 	</div>
 </body>
