--- a/Day061/Flask_WTForms/templates/login.html
+++ b/Day061/Flask_WTForms/templates/login.html
@@ -11,10 +11,18 @@
 		<h1>Login</h1>
 		<!-- This is where our form will go. -->
 
-		<form action="{{ url_for('login') }}" method="POST">
+		<form action="{{ url_for('login') }}" method="POST" novalidate>
 			{{ form.csfr_token }}
 			<p>{{ form.email.label }} <br> {{ form.email(size=30) }}</p>
+			{% for err in form.email.errors: %}
+			<span style="color:red"> {{ err }} </span>
+			{% endfor %}
+
 			<p>{{ form.password.label }} <br> {{ form.password(size=30) }}</p>
+			{% for err in form.password.errors: %}
+			<span style="color:red"> {{ err }} </span>
+			{% endfor %}
+
 			{{ form.submit }}
 		</form>
 	</div>
