Feat: Flask-WTForms Inheriting Templates

--- a/Day061/Flask_WTForms/templates/success.html
+++ b/Day061/Flask_WTForms/templates/success.html
@@ -1,17 +1,11 @@
-<!DOCTYPE HTML>
-<html>
+{% extends "base.html" %}
 
-<head>
-	<title>Success</title>
-</head>
+{% block title %}Success{% endblock %}
 
-<body>
+{% block content %}
 	<div class="container">
 		<h1>Top Secret </h1>
 		<iframe src="https://giphy.com/embed/Ju7l5y9osyymQ" width="480" height="360" frameBorder="0" class="giphy-embed"
 			allowFullScreen></iframe>
 	</div>
-
-</body>
-
-</html>
+{% endblock %}
