--- a/Day061/Flask_WTForms/templates/base.html
+++ b/Day061/Flask_WTForms/templates/base.html
@@ -2,16 +2,18 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}{% endblock %}</title>
-        <style>
-            {% block styling %}
-            body {
-                background: purple;
-            }
-            {% endblock %}
-        </style>
+
+        {% block styles %}
+            {{ bootstrap.load_css() }}
+        {% endblock %}
     </head>
     <body>
         {% block content %}{% endblock %}
+
+        {% block scripts %}
+            {{ bootstrap.load_js() }}
+        {% endblock %}
     </body>
     </html>
