--- a/Day063/Databases_with_SQLite_and_SQLAlchemy/templates/index.html
+++ b/Day063/Databases_with_SQLite_and_SQLAlchemy/templates/index.html
@@ -6,9 +6,15 @@
   </head>
   <body>
     <h1>My Library</h1>
+    {% if book_list == []: %}
+    <p>Library is Empty</p>
+    {% else: %}
     <ul>
-      <li></li>
+      {% for book in book_list: %}
+      <li>{{ book.title }} - {{ book.author }} - {{ book.rating }}/10</li>
+      {% endfor %}
     </ul>
+    {% endif %}
 
     <a href="{{ url_for('add') }}">Add New Book</a>
   </body>
