--- a/Day064/My_Top_10_Movies_Website/templates/index.html
+++ b/Day064/My_Top_10_Movies_Website/templates/index.html
@@ -10,8 +10,8 @@
     {% for movie in all_movies: %}
     <div class="card">
         <div class="front"
-             style="background-image: url('https://www.shortlist.com/media/images/2019/05/the-30-coolest-alternative-movie-posters-ever-2-1556670563-K61a-column-width-inline.jpg');">
-            <p class="large">1</p>
+             style="background-image: url('{{ movie.img_url }}');">
+            <p class="large">{{ movie.ranking }}</p>
         </div>
         <div class="back">
             <div>
