--- a/Day064/My_Top_10_Movies_Website/templates/index.html
+++ b/Day064/My_Top_10_Movies_Website/templates/index.html
@@ -26,14 +26,14 @@
                 </p>
 
                 <a href="#" class="button">Update</a>
-                <a href="#" class="button delete-button">Delete</a>
+                <a href="{{ url_for('delete', id=movie.id) }}" class="button delete-button">Delete</a>
             </div>
         </div>
     </div>
     {% endfor %}
 </div>
 <div class="container text-center add">
-    <a href="#" class="button">Add Movie</a>
+    <a href="{{ url_for('add_movie') }}" class="button">Add Movie</a>
 </div>
 
 {% endblock %}
