--- a/Day064/My_Top_10_Movies_Website/templates/select.html
+++ b/Day064/My_Top_10_Movies_Website/templates/select.html
@@ -5,9 +5,10 @@
 {% block content %}
 <div class="container">
     <h1 class="heading">Select Movie</h1>
-  <p>
-    <a href="#"> MOVIE TITLE - MOVIE RELEASE DATE</a>
-  </p>
-
+    {% for movie in options: %}
+    <p>
+        <a href="url_for('add', movie=movie)">{{ movie.original_title }}</a>
+    </p>
+    {% endfor %}
 </div>
 {% endblock %}
