Feat: My Top 10 Movies Website - Flask/SQLAlchemy

--- a/Day064/My_Top_10_Movies_Website/templates/index.html
+++ b/Day064/My_Top_10_Movies_Website/templates/index.html
@@ -7,7 +7,7 @@
     <h1 class="heading">My Top 10 Movies</h1>
     <p class="description">These are my all-time favourite movies.</p>
 
-    {% for movie in all_movies: %}
+    {% for movie in all_movies %}
     <div class="card">
         <div class="front"
              style="background-image: url('{{ movie.img_url }}');">
