--- a/Day065/Cafe_Restful_API/templates/index.html
+++ b/Day065/Cafe_Restful_API/templates/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1>Welcome to the Cafe & Wifi API</h1>
+    <a href="https://documenter.getpostman.com/view/21047917/2sA2xh2Cys">Documentation</a>
+
 </body>
 </html>
