--- a/Day067/Blog_Capston_Project/templates/make-post.html
+++ b/Day067/Blog_Capston_Project/templates/make-post.html
@@ -1,4 +1,6 @@
-{% block content %} {% include "header.html" %}
+{% block content %}
+{% include "header.html" %}
+{% from 'bootstrap5/form.html' import render_form %}
 
 <!-- Page Header -->
 <header
@@ -25,6 +27,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <!-- TODO:-Add CKEditor and render the form here -->
+        {{ render_form(form) }}
       </div>
     </div>
   </div>
