--- a/Day067/Blog_Capston_Project/templates/index.html
+++ b/Day067/Blog_Capston_Project/templates/index.html
@@ -25,14 +25,18 @@
             <div class="post-preview">
                 <a href="{{ url_for('show_post', post_id=post.id) }}">
                     <h2 class="post-title">{{ post.title }}</h2>
-                    <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+                    <h3 class="post-subtitle">{{ post.subtitle }}
+                        <a href="{{ url_for('delete_post', post_id=post.id) }}"><span>🗑️</span></a>
+                    </h3>
                 </a>
-                <!-- TODO: Add code to delete posts below -->
+
                 <p class="post-meta">
                     Posted by
                     <a href="#">{{post.author}}</a>
                     on {{post.date}}
+
                 </p>
+
             </div>
             <!-- Divider-->
             <hr class="my-4"/>
