Feat: Authentication with Flask - Flask-Login

--- a/Day068/Authentication_with_Flask/templates/secrets.html
+++ b/Day068/Authentication_with_Flask/templates/secrets.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %}
+{% block content %}
 
 <!--TODO: Display the user's name in the h1 title-->
 <div class="container">
