Feat: Blog Capstone Project - Registering Login Users

--- a/Day069/Blog_Project_Adding_Users/templates/login.html
+++ b/Day069/Blog_Project_Adding_Users/templates/login.html
@@ -1,5 +1,6 @@
-{% from "bootstrap5/form.html" import render_form %} {% block content %} {%
-include "header.html" %}
+{% from "bootstrap5/form.html" import render_form %}
+{% block content %}
+{%include "header.html" %}
 
 <!-- Page Header -->
 <header
@@ -24,9 +25,11 @@ include "header.html" %}
       <!-- TODO: add a flash message here for users registering twice -->
       <div class="col-lg-8 col-md-10 mx-auto">
         <!--TODO: render login form here-->
+        {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
       </div>
     </div>
   </div>
 </main>
 
-{% include "footer.html" %} {% endblock %}
+{% include "footer.html" %}
+{% endblock %}
