--- a/Day069/Blog_Project_Adding_Users/templates/index.html
+++ b/Day069/Blog_Project_Adding_Users/templates/index.html
@@ -32,7 +32,7 @@
           <a href="#">{{post.author}}</a>
           on {{post.date}}
           <!-- TODO: Only show delete button if user id is 1 (admin user) -->
-          <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
+          <a href="{{url_for('delete_post', post_id=post.id) }}">🗑️</a>
         </p>
       </div>
       <!-- Divider-->
