Feat: Blog Project - Setting up admin persmissions

--- a/Day069/Blog_Project_Adding_Users/templates/header.html
+++ b/Day069/Blog_Project_Adding_Users/templates/header.html
@@ -67,7 +67,7 @@
               >
             </li>
             <!-- TODO: Only show Login/Register if user is logged out. Otherwise show "Log Out" -->
-            {% if not logged_in: %}
+            {% if not current_user.is_authenticated: %}
             <li class="nav-item">
               <a
                 class="nav-link px-lg-3 py-3 py-lg-4"
