--- a/Day069/Blog_Project_Adding_Users/templates/make-post.html
+++ b/Day069/Blog_Project_Adding_Users/templates/make-post.html
@@ -16,8 +16,7 @@ include "header.html" %}
           <h1>New Post</h1>
           {% endif %}
           <span class="subheading"
-            >You're going to make a great blog post!</span
-          >
+            >You're going to make a great blog post!</span>
         </div>
       </div>
     </div>
@@ -28,8 +27,8 @@ include "header.html" %}
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        {{ ckeditor.load() }} {{ ckeditor.config(name='body') }} {{
-        render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+        {{ ckeditor.load() }} {{ ckeditor.config(name='body') }}
+        {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
       </div>
     </div>
   </div>
