--- a/Day069/Blog_Project_Adding_Users/templates/post.html
+++ b/Day069/Blog_Project_Adding_Users/templates/post.html
@@ -47,7 +47,7 @@
             {% for comment in post.comments: %}
             <li>
               <div class="commenterImage">
-                <img src="../static/assets/img/default-profile.jpg" />
+                <img src="{{ comment.author.email | gravatar }}" />
               </div>
               <div class="commentText">
                 <p>{{ comment.text|safe }}</p>
